<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="st_EL2809" Id="{a0b441c4-9b14-4406-86d0-c18ec279f75b}">
    <Declaration><![CDATA[TYPE st_EL2809 :
STRUCT
	
		sTerminalName                                           :   STRING(200):= 'EL2809 | 16-Channel Digital Output';
	//=============================================================================================================
	// TERMINAL - EL2809	16-Channel Digital Output Terminal	 (Term ...)
	qPassIndicatorGreen 					AT %Q*			: 	BOOL;	// EL2809 channel 1
	qRejectIndicatorRed						AT %Q* 			: 	BOOL;	// EL2809 channel 2
	qEL2809_Ch3				                AT %Q*          :   BOOL;   // EL2809 channel 3
	qEL2809_Ch4				            	AT %Q*          :   BOOL;   // EL2809 channel 4   	
	qEL2809_Ch5		     					AT %Q*	 		: 	BOOL;	// EL2809 channel 5	
	qEL2809_Ch6	    		            	AT %Q*	 		: 	BOOL;	// EL2809 channel 6	
    qEL2809_Ch7	                        	AT %Q*          :   BOOL;   // EL2809 channel 7	
	qEL2809_Ch8								AT %Q*	 		: 	BOOL;	// EL2809 channel 8 
	qEL2809_Ch9				                AT %Q*          :   BOOL;   // EL2809 channel 9
	qEL2809_Ch10				            AT %Q*          :   BOOL;   // EL2809 channel 10   	
	qEL2809_Ch11		     				AT %Q*	 		: 	BOOL;	// EL2809 channel 11	
	qEL2809_Ch12	    		            AT %Q*	 		: 	BOOL;	// EL2809 channel 12	
    qEL2809_Ch13	                        AT %Q*          :   BOOL;   // EL2809 channel 13	
	qEL2809_Ch14							AT %Q*	 		: 	BOOL;	// EL2809 channel 14 
    qEL2809_Ch15        			        AT %Q*	 		: 	BOOL;	// EL2809 channel 15 
	qEL2809_Ch16                            AT %Q*	 		: 	BOOL;	// EL2809 channel 16 
	
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>