<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <POU Name="PRG_HMI" Id="{1fa80f95-1dd5-4aa8-847a-7b5565884994}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_HMI
VAR
	

	tonCaseDelay				: ARRAY [1..20] OF TON;
	tofCase						: ARRAY [1..20] OF TOF;
	rtrigCaseTriger				: ARRAY [1..20] OF R_TRIG;
	nHeightMeasureStateValue	: ARRAY [1..4] OF INT;
	i							: INT;

END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[ACT_ScreensNamesSet();
ACT_Buttons();
ACT_TimTrig();
ACT_General();]]></ST>
    </Implementation>
    <Action Name="ACT_Buttons" Id="{516d1fa4-b74a-4152-be9e-d2291d807b03}">
      <Implementation>
        <ST><![CDATA[ACT_TimTrig();

IF tonCaseDelay[1].Q THEN
	
		GVL_HMI_GLOBAL.bResetButton	:= FALSE;
		
END_IF
IF tonCaseDelay[2].Q THEN
	
		GVL_HMI_GLOBAL.bStopButton	:= FALSE;
		
END_IF
IF tonCaseDelay[3].Q THEN
	
		GVL_HMI_GLOBAL.bStartButton	:= FALSE;
		
END_IF

IF GVL_HMI_GLOBAL.bStartLeakMan THEN
	GVL_IO.dw_B07_i28General_I_O.bStart := TRUE;
END_IF
IF tonCaseDelay[4].Q THEN
	
		GVL_HMI_GLOBAL.bStartLeakMan	:= FALSE;
		GVL_IO.dw_B07_i28General_I_O.bStart := FALSE;
END_IF

IF GVL_HMI_GLOBAL.bStopLeakMan THEN
	GVL_IO.dw_B07_i28General_I_O.bStop := TRUE;
END_IF
IF tonCaseDelay[5].Q THEN
	
		GVL_HMI_GLOBAL.bStopLeakMan	:= FALSE;
		GVL_IO.dw_B07_i28General_I_O.bStop := FALSE;
		
END_IF

IF GVL_HMI_GLOBAL.bResetLeakMan THEN
	GVL_IO.dw_B07_i28General_I_O.bReset := TRUE;
END_IF
IF tonCaseDelay[6].Q THEN
	
		GVL_HMI_GLOBAL.bResetLeakMan	:= FALSE;
		GVL_IO.dw_B07_i28General_I_O.bReset := FALSE;
		
END_IF

IF tonCaseDelay[7].Q THEN
	
		GVL_HMI_GLOBAL.bShutDown	:= FALSE;
		
END_IF
IF tonCaseDelay[8].Q THEN
	
		GVL_HMI_GLOBAL.bSetLeakProgramID	:= FALSE;
		
END_IF

// Stopper Press Enable/Disable Message

IF GVL_HMI_GLOBAL.bStopperPressEnable THEN 
	GVL_HMI_GLOBAL.sStopperEnableDisable:='STOPPER PRESS ENABLED';
	ELSE
	GVL_HMI_GLOBAL.sStopperEnableDisable:='STOPPER PRESS DISABLED';
END_IF


]]></ST>
      </Implementation>
    </Action>
    <Action Name="ACT_General" Id="{e7f84ff8-793c-4f64-a332-7ebab4a91e7b}">
      <Implementation>
        <ST><![CDATA[IF  tofCase[1].Q
	AND (NOT GVL_MASTER.stMasterControl.bNoMachineImmediateFault OR NOT GVL_MASTER.stMasterControl.bNoCycleStopFault) THEN
	GVL_HMI_GLOBAL.bAutoCycleFaultDialog := TRUE;
END_IF]]></ST>
      </Implementation>
    </Action>
    <Action Name="ACT_ScreensNamesSet" Id="{cfb190dc-badd-4760-9c94-186ee66d1d38}">
      <Implementation>
        <ST><![CDATA[GVL_HMI_GLOBAL.aIOScreen[0] := 'Overview';
GVL_HMI_GLOBAL.aIOScreen[1] := 'HMI - CP2913-0000 | Beckhoff HMI';
GVL_HMI_GLOBAL.aIOScreen[2] := 'PLC - C6015-0010 | Beckhoff PLC | Windows 10 Embedded';
GVL_HMI_GLOBAL.aIOScreen[3] := 'Terminal 1- EK1100 | EtherCAT Coupler';
GVL_HMI_GLOBAL.aIOScreen[4] := 'Terminal 2 - EL6070 | Licence ';
GVL_HMI_GLOBAL.aIOScreen[5] := CONCAT('Terminal 3 - ' , GVL_IO.dw_T02_EL1809.sTerminalName);
GVL_HMI_GLOBAL.aIOScreen[6] := CONCAT('Terminal 4 - ' , GVL_IO.dw_T03_EL2809.sTerminalName);
GVL_HMI_GLOBAL.aIOScreen[7] := 'Terminal 12 - EL6631 |  2-port communication interface';
GVL_HMI_GLOBAL.aIOScreen[8] := 'I28 | Cincinnati Leak Tester | ProfiNET';

GVL_HMI_GLOBAL.aManualScreen[0] := 'Cognex | Vision Test';
GVL_HMI_GLOBAL.aManualScreen[1] := 'Keyence | Height Test';
GVL_HMI_GLOBAL.aManualScreen[2] := 'Cincinnati | Leak Test';
]]></ST>
      </Implementation>
    </Action>
    <Action Name="ACT_TimTrig" Id="{c608156b-aba3-4ac2-9426-32de0bea0b69}">
      <Implementation>
        <ST><![CDATA[

tonCaseDelay[1](IN:= GVL_HMI_GLOBAL.bResetButton,PT:=T#500MS);
tonCaseDelay[2](IN:= GVL_HMI_GLOBAL.bStopButton,PT:=T#500MS);
tonCaseDelay[3](IN:= GVL_HMI_GLOBAL.bStartButton,PT:=T#500MS);
tonCaseDelay[4](IN:= GVL_HMI_GLOBAL.bStartLeakMan,PT:=T#500MS);
tonCaseDelay[5](IN:= GVL_HMI_GLOBAL.bStopLeakMan,PT:=T#500MS);
tonCaseDelay[6](IN:= GVL_HMI_GLOBAL.bResetLeakMan,PT:=T#500MS);
//tonCaseDelay[7](IN:= GVL_HMI_GLOBAL.bShutDown,PT:=T#500MS);
tonCaseDelay[8](IN:= GVL_HMI_GLOBAL.bSetLeakProgramID,PT:=T#5S);
tonCaseDelay[9](IN:= ,PT:=T#1S);
tonCaseDelay[10](IN:= ,PT:=T#1S);

tofCase[1](IN:= GVL_MASTER.stStationSruct[0].nState > 1000 AND GVL_MASTER.stStationSruct[0].nState < 1900,PT:=T#1S);



rtrigCaseTriger[1](CLK := GVL_MASTER.stNest.bPieceReject);

	]]></ST>
      </Implementation>
    </Action>
    <LineIds Name="PRG_HMI">
      <LineId Id="73" Count="2" />
      <LineId Id="63" Count="0" />
    </LineIds>
    <LineIds Name="PRG_HMI.ACT_Buttons">
      <LineId Id="2" Count="15" />
      <LineId Id="1" Count="0" />
      <LineId Id="50" Count="0" />
      <LineId Id="46" Count="2" />
      <LineId Id="20" Count="3" />
      <LineId Id="19" Count="0" />
      <LineId Id="51" Count="2" />
      <LineId Id="49" Count="0" />
      <LineId Id="25" Count="2" />
      <LineId Id="54" Count="0" />
      <LineId Id="28" Count="0" />
      <LineId Id="24" Count="0" />
      <LineId Id="56" Count="2" />
      <LineId Id="55" Count="0" />
      <LineId Id="30" Count="2" />
      <LineId Id="59" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="29" Count="0" />
      <LineId Id="60" Count="0" />
      <LineId Id="36" Count="3" />
      <LineId Id="35" Count="0" />
      <LineId Id="41" Count="4" />
      <LineId Id="67" Count="0" />
      <LineId Id="64" Count="0" />
      <LineId Id="68" Count="0" />
      <LineId Id="62" Count="0" />
      <LineId Id="65" Count="0" />
      <LineId Id="70" Count="0" />
      <LineId Id="69" Count="0" />
      <LineId Id="66" Count="0" />
      <LineId Id="40" Count="0" />
      <LineId Id="34" Count="0" />
      <LineId Id="18" Count="0" />
    </LineIds>
    <LineIds Name="PRG_HMI.ACT_General">
      <LineId Id="1" Count="1" />
      <LineId Id="4" Count="0" />
      <LineId Id="3" Count="0" />
    </LineIds>
    <LineIds Name="PRG_HMI.ACT_ScreensNamesSet">
      <LineId Id="1" Count="3" />
      <LineId Id="6" Count="3" />
      <LineId Id="12" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="15" Count="0" />
      <LineId Id="17" Count="1" />
      <LineId Id="14" Count="0" />
    </LineIds>
    <LineIds Name="PRG_HMI.ACT_TimTrig">
      <LineId Id="17" Count="1" />
      <LineId Id="2" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="3" Count="0" />
      <LineId Id="19" Count="2" />
      <LineId Id="25" Count="0" />
      <LineId Id="22" Count="0" />
      <LineId Id="26" Count="4" />
      <LineId Id="4" Count="0" />
      <LineId Id="23" Count="0" />
      <LineId Id="14" Count="1" />
      <LineId Id="1" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>